--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Bonjour à tous. Je tiens aujourd'hui à insulter la grosse grand mère de mon jungler se fils de pute qui ne comprend pas que les krugs peuvent l'attendre pendant que je me fais fister par le jungler ennemie :)</h1>
-        <p>This page is designed to insulté des gens qui le mérite ftg hichem idc ok laisse moi écrire comme je veux. Bref
-            NIQUEZ VOS GRANDS MERE LES PUTES IDCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC.</p>
-        <p>Feel free to explore how to end yourself in game :)</p>
-        <a href="https://fr.pornhub.com/video/search?search=pronhub" class="button">Click Me for a treat :)</a>
+        <h1>EZ</h1>
+        <p>Baby c'est tellement ez.</p>
+        <p>Baby encore une fois c'est ez</p>
+        <a href="https://cdn.cloudflare.steamstatic.com/steam/apps/795040/capsule_616x353.jpg?t=1686536132" class="button">Click Me for EZ</a>
     </div>
 </body>
 </html>
